force-app/main/default/objects/Google_Drive_Webhook_Event__e/Google_Drive_Webhook_Event__e.object-meta.xml
<CustomObject>
    <label>Google Drive Webhook Event</label>
    <pluralLabel>Google Drive Webhook Events</pluralLabel>
</CustomObject>