force-app/main/default/objects/Google_Drive_Webhook_Event__e/fields/Channel_Token__c.field-meta.xml
<CustomField>
    <fullName>Channel_Token__c</fullName>
    <label>Channel Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>