force-app/main/default/objects/Google_Drive_Webhook_Event__e/fields/Message_Number__c.field-meta.xml
<CustomField>
    <fullName>Message_Number__c</fullName>
    <label>Message Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>