force-app/main/default/objects/Google_Drive_Webhook_Event__e/fields/Resource_ID__c.field-meta.xml
<CustomField>
    <fullName>Resource_ID__c</fullName>
    <label>Resource ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>