force-app/main/default/objects/Google_Drive_Webhook_Event__e/fields/Resource_State__c.field-meta.xml
<CustomField>
    <fullName>Resource_State__c</fullName>
    <label>Resource State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>